<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/golden_bg"
        tools:context=".CreateAccountActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:alpha="0.2"
            android:contentDescription="@string/Background"
            android:src="@drawable/logo4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.461" />

        <TextView
            android:id="@+id/daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:background="@drawable/corner_bg"
            android:backgroundTint="@color/maroon"
            android:fontFamily="@font/montserrat"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/daftar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/Sekarang"
            app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Sekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            android:layout_marginEnd="72dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/sekarang"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/createAcc_Email_et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/daftar" />

        <EditText
            android:id="@+id/createAcc_Password_Et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAcc_Email_et" />

        <EditText
            android:id="@+id/createAcc_Confirm_Et"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/konfirmasi"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAcc_Password_Et" />

        <Button
            android:id="@+id/lanjut_button"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/mybutton"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/montserrat"
            android:text="@string/lanjut"
            android:textAllCaps="false"
            android:textColor="@color/golden_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAcc_Confirm_Et" />

        <ProgressBar
            android:id="@+id/loadingBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:indeterminateDrawable="@drawable/progress_bar"
            android:progress="40"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lanjut_button" />

        <TextView
            android:id="@+id/createAcc_punyaAkun_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:shadowColor="#858080"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="6"
            android:text="@string/sudah_punya_akun"
            android:textColor="#FFF0CA"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.892"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAcc_Confirm_Et" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>