<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/golden_bg">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_opac" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ProfileSetupActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="41dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/montserrat"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/maroon"
                android:backgroundTint="@color/maroon"
                app:srcCompat="@drawable/line" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.44"
                    app:srcCompat="@drawable/default_profile" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/masukkan_username" />

            <EditText
                android:id="@+id/profile_settings_nama_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/edit_text_box"
                android:ems="10"
                android:fontFamily="@font/montserrat"
                android:inputType="textPersonName"
                android:padding="3dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/masukkan_no_hp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/masukkan_no_hp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/montserrat"
                    android:text="+62"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/profile_settings_hp_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/edit_text_box"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:inputType="phone"
                    android:padding="3dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="12sp"

                    />

            </LinearLayout>

            <Button
                android:id="@+id/ok_button"
                android:layout_width="66dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/mybutton"
                android:fontFamily="@font/montserrat"
                android:text="OK"
                android:textColor="@color/golden_bg"
                android:textSize="16sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>